--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                         </li>
                     </ul>
                     <li class="element">
-                        <a href='./display/Experiments/Experiment05/index.html' target="screen">Experiment 05</a>
+                        <a href='./display/Experiments/Experiment05/index.html' target="_self">Experiment 05</a>
                     </li>
                     <li class="element">
-                        <a href='./display/Experiments/Experiment06/index.html' target="screen">Experiment 06</a>
+                        <a href='./display/Experiments/Experiment06/index.html' target="_self">Experiment 06</a>
                     </li>
                     <li class="element">
                         <a href='MARKSHEET.xml' target="_new">Experiment 07</a>
