--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <a href='MARKSHEET.xml' target="_new">Experiment 07</a>
                     </li>
                     <li class="element">
-                        <a href='./display/Experiments/Experiment08/index.html' target="screen">Experiment 08</a>
+                        <a href='frame6.html' target="_self">Experiment 08</a>
                     </li>
                 </ul>
                
