--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
                         <a href='frame6.html' target="_self">Experiment 08</a>
                     </li>
                 </ul>
-               
                 <li class="element">
                     <a href='./display/colourchange.html' target="screen">Colour Changer</a>
+                </li>
+                <li class="element">
+                    <a href='' target="_self">WDL PROJECTS</a>
                 </li>
                 <li class="element">
                     <a href='./display/agecalculator.html' target="screen">Age Calculator</a>
