--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <a href='./display/colourchange.html' target="screen">Colour Changer</a>
                 </li>
                 <li class="element">
-                    <a href='' target="_self">WDL PROJECTS</a>
+                    <a href='https://girish21052000.github.io/PROJECT/' target="_self">WDL MINIPROJECT</a>
                 </li>
                 <li class="element">
                     <a href='./display/agecalculator.html' target="screen">Age Calculator</a>
